--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -96,11 +96,15 @@
       </section>
 
       <section [attr.id]="generateID(opportunityFields.General)" *ngIf="shouldBeDisplayed(opportunityFields.General)">
-        <h2>General Information</h2>
-        <samButton *ngIf="differences?.changesExist" [buttonId]="'defaultBtn'" [buttonText]="'View Changes'" [buttonType]="btnType" (click)="showHide()"></samButton>
-        <span *ngIf="showChanges">
+        <h2>
+          General Information
+          <samButton *ngIf="differences?.changesExist" [buttonId]="'defaultBtn'" [buttonText]="'View Changes'" [buttonType]="btnType" (click)="showHide()"></samButton>
+        </h2>
+        
+        <p *ngIf="showChanges" class="usa-font-lead m_B-2x">
           Changes from {{differences?.postedDate}}
-        </span>
+        </p>
+        
         <ul class="usa-unstyled-list">
           <li [attr.id]="generateID(opportunityFields.Type, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.Type)">
             <strong>Opportunity Type: </strong>
@@ -121,7 +125,9 @@
             <ng-container *ngIf="opportunity.parent == null">{{ opportunity?.postedDate | dateFormat: 'MMM DD, YYYY' }}</ng-container>
           </li>
           <li [attr.id]="generateID(opportunityFields.ResponseDate, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.ResponseDate)">
-            <samLabel *ngIf="differences?.updateResponseDate" [labelType]="'small'" [labelText]="' '"></samLabel>
+            <!-- <samLabel *ngIf="differences?.updateResponseDate" [labelType]="'small'" [labelText]="' '">
+            </samLabel> -->
+            <i *ngIf="differences?.updateResponseDate" class="fa fa-square" aria-hidden="true"></i>
             <strong>Update/Amendment Response Date: </strong>
             {{ opportunity.data?.solicitation?.deadlines?.response | dateFormat: 'MMM DD, YYYY' }}
             <span *ngIf="showChanges && differences?.updateResponseDate" [innerHTML]="differences?.updateResponseDate"></span>
@@ -133,7 +139,8 @@
           </li>
           <li [attr.id]="generateID(opportunityFields.ArchivePolicy, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.ArchivePolicy)"
               [ngSwitch]="opportunity.data?.archive?.type">
-            <samLabel *ngIf="differences?.archivingPolicy" [labelType]="'small'" [labelText]="' '"></samLabel>
+            <!-- <samLabel *ngIf="differences?.archivingPolicy" [labelType]="'small'" [labelText]="' '"></samLabel> -->
+            <i *ngIf="differences?.archivingPolicy" class="fa fa-square" aria-hidden="true"></i>
             <strong>Archiving Policy: </strong>
             <ng-container *ngSwitchCase="'manual'">Manual Archive</ng-container>
             <ng-container *ngSwitchCase="'auto15'">Automatic, 15 days after response date</ng-container>
@@ -141,7 +148,8 @@
             <span *ngIf="showChanges && differences?.archivingPolicy" [innerHTML]="differences?.archivingPolicy"></span>
           </li>
           <li [attr.id]="generateID(opportunityFields.ArchiveDate, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.ArchiveDate)">
-            <samLabel *ngIf="differences?.updateArchiveDate" [labelType]="'small'" [labelText]="' '"></samLabel>
+            <!-- <samLabel *ngIf="differences?.updateArchiveDate" [labelType]="'small'" [labelText]="' '"></samLabel> -->
+            <i *ngIf="differences?.updateArchiveDate" class="fa fa-square" aria-hidden="true"></i>
             <strong>Update/Amendment Archive Date: </strong>
             {{ opportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY' }}
             <span *ngIf="showChanges && differences?.updateArchiveDate" [innerHTML]="differences?.updateArchiveDate"></span>
@@ -167,7 +175,8 @@
             {{ opportunity?.data?.award?.justificationAuthority?.modificationNumber }}
           </li>
           <li [attr.id]="generateID(opportunityFields.SpecialLegislation, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.SpecialLegislation)">
-            <samLabel *ngIf="differences?.specialLegislation" [labelType]="'small'" [labelText]="' '"></samLabel>
+            <!-- <samLabel *ngIf="differences?.specialLegislation" [labelType]="'small'" [labelText]="' '"></samLabel> -->
+            <i *ngIf="differences?.specialLegislation" class="fa fa-square" aria-hidden="true"></i>
             <strong>Special Legislation: </strong>
             <ng-container *ngIf="opportunity?.data?.isRecoveryRelated == true">
               Recovery and Reinvestment Act
@@ -195,7 +204,8 @@
           </li>
           <li [attr.id]="generateID(opportunityFields.SetAside, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.SetAside)">
             <ng-container *ngIf="(opportunity.data?.solicitation?.setAside != originalOpportunity?.data?.solicitation?.setAside) && dictionary">
-              <samLabel *ngIf="differences?.specialLegislation" [labelType]="'small'" [labelText]="' '"></samLabel>
+              <!-- <samLabel *ngIf="differences?.specialLegislation" [labelType]="'small'" [labelText]="' '"></samLabel> -->
+              <i *ngIf="differences?.specialLegislation" class="fa fa-square" aria-hidden="true"></i>
               <strong>Update/Amendment Set Aside: </strong>
               <ng-container *ngFor = "let element of [opportunity.data?.solicitation?.setAside] | filterMultiArrayObject:findDictionary('set_aside_type'):'elementId':false:''">
                 <ng-container> {{ element.value }}</ng-container>
@@ -204,7 +214,8 @@
             </ng-container>
           </li>
           <li [attr.id]="generateID(opportunityFields.ClassificationCode, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.ClassificationCode)">
-            <samLabel *ngIf="differences?.classificationCode" [labelType]="'small'" [labelText]="' '"></samLabel>
+            <!-- <samLabel *ngIf="differences?.classificationCode" [labelType]="'small'" [labelText]="' '"></samLabel> -->
+            <i *ngIf="differences?.classificationCode" class="fa fa-square" aria-hidden="true"></i>
             <strong>Classification Code: </strong>
             <ng-container *ngIf="opportunity.data?.classificationCode && dictionary">
               <ng-container *ngFor = "let element of [opportunity.data?.classificationCode] | filterMultiArrayObject:findDictionary('classification_code'):'elementId':false:''">
@@ -214,7 +225,8 @@
             <span *ngIf="showChanges && differences?.classificationCode" [innerHTML]="differences?.classificationCode"></span>
           </li>
           <li [attr.id]="generateID(opportunityFields.NAICSCode, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.NAICSCode)">
-            <samLabel *ngIf="differences?.naicsCode" [labelType]="'small'" [labelText]="' '"></samLabel>
+            <!-- <samLabel *ngIf="differences?.naicsCode" [labelType]="'small'" [labelText]="' '"></samLabel> -->
+            <i *ngIf="differences?.naicsCode" class="fa fa-square" aria-hidden="true"></i>
             <strong>NAICS Code(s): </strong>
             <ng-container *ngIf="opportunity.data?.naicsCode && opportunity.data?.naicsCode[0] != null && dictionary">
               <ul>
@@ -226,7 +238,8 @@
             <pre *ngIf="showChanges && differences?.naicsCode" [innerHTML]="differences?.naicsCode"></pre>
           </li>
           <li [attr.id]="generateID(opportunityFields.POP, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.POP)">
-            <samLabel *ngIf="differences?.placeOfPerformance" [labelType]="'small'" [labelText]="' '"></samLabel>
+            <!-- <samLabel *ngIf="differences?.placeOfPerformance" [labelType]="'small'" [labelText]="' '"></samLabel> -->
+            <i *ngIf="differences?.placeOfPerformance" class="fa fa-square" aria-hidden="true"></i>
             <strong >Place of Performance: </strong>
             <div [attr.id]="generateID(opportunityFields.POPLocation, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.POPLocation)">
               {{opportunity.data?.placeOfPerformance?.streetAddress}}
@@ -254,12 +267,15 @@
       </section>
 
       <section [attr.id]="generateID(opportunityFields.Synopsis)" *ngIf="shouldBeDisplayed(opportunityFields.Synopsis) && opportunity.data?.descriptions[0].content">
+        
         <h2>Synopsis</h2>
-        <samLabel *ngIf="differences?.description" [labelType]="'small'" [labelText]="' '"></samLabel>
+        <!-- <samLabel *ngIf="differences?.description" [labelType]="'small'" [labelText]="' '"></samLabel> -->
         <h3>
+          <i *ngIf="differences?.description" class="fa fa-square" aria-hidden="true"></i>
           <ng-container *ngIf="opportunity.data?.type === 'i'">Description of Benefits</ng-container>
           <ng-container *ngIf="opportunity.data?.type !== 'i'">Description</ng-container>
         </h3>
+        
         <div [innerHTML]="opportunity.data?.descriptions[0].content | fixhtml"></div>
       </section>
       <span *ngIf="showChanges && differences?.description" [innerHTML]="differences?.description"></span>
@@ -376,8 +392,11 @@
         <h2>Contact Information</h2>
         <div class="usa-grid-full">
           <div class="usa-width-one-whole m_B-4x" [attr.id]="generateID(opportunityFields.Office, 'contact')" *ngIf="shouldBeDisplayed(opportunityFields.Office)">
-            <samLabel *ngIf="differences?.contractingOfficeAddress" [labelType]="'small'" [labelText]="' '"></samLabel>
-            <h3>Contracting Office Address:</h3>
+            <!-- <samLabel *ngIf="differences?.contractingOfficeAddress" [labelType]="'small'" [labelText]="' '"></samLabel> -->
+            <h3>
+              <i *ngIf="differences?.contractingOfficeAddress" class="fa fa-square" aria-hidden="true"></i>
+              Contracting Office Address:
+            </h3>
             <span [attr.id]="generateID(opportunityFields.OfficeStreet, 'contact')" *ngIf="shouldBeDisplayed(opportunityFields.OfficeStreet)">
               {{opportunityLocation?.street}}
             </span>
@@ -398,8 +417,11 @@
         </div>
         <div class="usa-grid-full">
           <div class="usa-width-one-half" [attr.id]="generateID(opportunityFields.POC, 'contact-primary')" *ngIf="shouldBeDisplayed(opportunityFields.POC)">
-            <samLabel *ngIf="differences?.primaryPointOfContact" [labelType]="'small'" [labelText]="' '"></samLabel>
-            <h3>Primary Point of Contact</h3>
+            <!-- <samLabel *ngIf="differences?.primaryPointOfContact" [labelType]="'small'" [labelText]="' '"></samLabel> -->
+            <h3>
+              <i *ngIf="differences?.primaryPointOfContact" class="fa fa-square" aria-hidden="true"></i>
+              Primary Point of Contact
+            </h3>
             <ul class="usa-unstyled-list">
               <li [attr.id]="generateID(opportunityFields.POCFullName, 'contact-primary')"
                   *ngIf="opportunity.data?.pointOfContact[0]?.fullName && shouldBeDisplayed(opportunityFields.POCFullName)">
@@ -431,8 +453,11 @@
           </div>
           <span *ngIf="showChanges && differences?.primaryPointOfContact" [innerHTML]="differences?.primaryPointOfContact"></span>
           <div class="usa-width-one-half" [attr.id]="generateID(opportunityFields.POC, 'contact-secondary')" *ngIf="shouldBeDisplayed(opportunityFields.POC)">
-            <samLabel *ngIf="differences?.secondaryPointOfContact" [labelType]="'small'" [labelText]="' '"></samLabel>
-            <h3>Secondary Point of Contact</h3>
+            <!-- <samLabel *ngIf="differences?.secondaryPointOfContact" [labelType]="'small'" [labelText]="' '"></samLabel> -->
+            <h3>
+              <i *ngIf="differences?.secondaryPointOfContact" class="fa fa-square" aria-hidden="true"></i>
+              Secondary Point of Contact
+            </h3>
             <ul class="usa-unstyled-list">
               <li [attr.id]="generateID(opportunityFields.POCFullName, 'contact-secondary')"
                   *ngIf="opportunity.data?.pointOfContact[1]?.fullName && shouldBeDisplayed(opportunityFields.POCFullName)">
