--- a/src/styles/pages/_opportunity.scss
+++ b/src/styles/pages/_opportunity.scss
@@ -245,6 +245,29 @@
     color: #5b616b;
   }
   
+  /* View Changes */
+  /*============================*/
+  h2 button{
+    margin: 0;
+    padding: 5px 10px;
+    font-size: 1.4rem;
+    vertical-align: middle;
+  }
+  
+  h2 + p.usa-font-lead{
+    margin-top: -1.7rem;
+  }
+  
+  .fa.fa-square{
+    margin-left: -1.8rem;
+    color: #003264;
+    font-size: 1.7rem;
+  }
+  
+  strike{
+    color: #7b7b7b;
+  }
+  
   /* MISC */
   /*============================*/
   samsidenav{
