Fixes IE 11 history component bullets issue

--- a/src/styles/components/_history.scss
+++ b/src/styles/components/_history.scss
@@ -27,7 +27,7 @@ history{
       &:before{
         content: "\F111" !important;
         font: normal normal normal 17px/1 FontAwesome;
-        display: inline-table;
+        // display: inline-table;
         margin-left: -8px;
         color: #5b616b;
       }
