integrate with real access object

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -512,10 +512,10 @@
   <div class="usa-width-one-fourth">
     <pre>{{listOptions | json}}</pre>
   </div>
-  <div class="usa-width-one-fourth">
-      <sam-list-input [control]="listControl" [options]="listOptions"></sam-list-input>
-  </div>
-  <div class="usa-width-one-fourth">
-      <sam-list-input [control]="listControl" [selections]="[1,4]" [options]="listOptions"></sam-list-input>
-  </div>
+  <!--<div class="usa-width-one-fourth">-->
+      <!--<sam-list-input [control]="listControl" [options]="listOptions"></sam-list-input>-->
+  <!--</div>-->
+  <!--<div class="usa-width-one-fourth">-->
+      <!--<sam-list-input [control]="listControl" [selections]="[1,4]" [options]="listOptions"></sam-list-input>-->
+  <!--</div>-->
 </div>
