--- a/src/app/users/public/access/access.template.html
+++ b/src/app/users/public/access/access.template.html
@@ -56,7 +56,7 @@
               </div>
             </div>
           </div>
-          <div class="usa-grid-full">
+          <div class="usa-grid-full organizations-row">
             <div class="usa-width-one-sixth">
               <strong>Organizations</strong>
             </div>
