--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -259,7 +259,7 @@
         </h3>
         <div [innerHTML]="opportunity.data?.descriptions[0].content | fixhtml"></div>
       </section>
-      <span *ngIf="showChanges && differences?.description"> {{differences?.description}}</span>
+      <textarea *ngIf="showChanges && differences?.description"> {{differences?.description}}</textarea>
 
       <!-- Packages -->
       <section [attr.id]="generateID(opportunityFields.Packages)" *ngIf="shouldBeDisplayed(opportunityFields.Packages)">
