--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -256,9 +256,9 @@
         </div>
 
         <ng-container *ngIf="attachments && attachments.length > 0">
-          <div *ngFor="let attachment of attachments">
+          <!--<div *ngFor="let attachment of attachments">-->
           <!-- Header -->
-          <div class="card download-container" *ngFor="let package of attachment.packages" [@intro]="fade">
+          <div class="card download-container" *ngFor="let package of packages" [@intro]="fade">
 
             <!-- It's public -->
             <div *ngIf="package.access === 'Public'" class="card-header {{ package.accordionState }}" (click)="toggleAccordion(package)" tabindex="0" (keyup.enter)="toggleAccordion(package)">
@@ -274,11 +274,12 @@
             </span>
 
             <ul *ngIf="package.access === 'Public'" [@accordion]="package.accordionState" class="usa-zebra-list">
-              <li *ngFor="let element of package.attachments">
+              <!--<li *ngFor="let element of package.attachments">-->
+              <li *ngFor="let resource of package.resources">
                 <!-- Element -->
-                <ng-container *ngFor="let resource of attachment.resources">
+                <!--<ng-container *ngFor="let resource of attachment.resources">-->
                   <!-- Resource -->
-                  <ng-container *ngIf="element.resourceId === resource.resourceId">
+                  <!--<ng-container *ngIf="element.resourceId === resource.resourceId">-->
                     <div class="download-info">
 
                       <span class="download-info-icon">
@@ -304,8 +305,8 @@
                         {{resource.typeInfo.name}}
                       </span>
                     </div>
-                  </ng-container>
-                </ng-container>
+                  <!--</ng-container> -->
+                <!--</ng-container> -->
               </li>
             </ul>
 
@@ -334,17 +335,17 @@
               </div>
             </div>
           </div>
-          </div>
+          <!--</div>-->
         </ng-container>
 
-        <div class="card" *ngIf="!attachments && !attachmentError" [@intro]="fade">
+        <div class="card" *ngIf="packages.length < 1 && !attachmentError" [@intro]="fade">
           <div class="card-secure-content usa-text-center">
             <i class="fa fa-spinner fa-spin"></i>
             <strong>Loading &hellip;</strong>
           </div>
         </div>
 
-        <div class="card" *ngIf="attachmentError" [@intro]="fade">
+        <div class="card" *ngIf="packages.length < 1 && attachmentError" [@intro]="fade">
           <div class="card-secure-content usa-text-center">
             <strong>No packages uploaded.</strong>
           </div>
