hide save continue button on last section

--- a/src/app/app-components/object-form/object-form.template.html
+++ b/src/app/app-components/object-form/object-form.template.html
@@ -1,4 +1,5 @@
 <form [formGroup] = "mainForm">
+
     <div *ngFor="let item of objectFormData; let i=index;" [id]="item.section" [class.hide]="selectedPage !== i">
       <a [routerLink]="['#' + item.section , {id: i}]" fragment="item.section"></a>
 
@@ -11,9 +12,9 @@
 
       <div class="pull-left">
         <samButton buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
-        <samButton *ngIf="i >0" buttonText="Previous" (onClick)="onPreviousClick($event)"></samButton>
+        <samButton *ngIf="i > 0" buttonText="Previous" (onClick)="onPreviousClick($event)"></samButton>
         <samButton [buttonId]="item.section + '_se'" [buttonType]="(!mainForm.controls[item.section].valid ? 'disabled' : 'default')" buttonText="Save and Exit" (onClick)="onSaveExitClick($event)"></samButton>
-        <samButton [buttonId]="item.section + '_sc'" [buttonType]="(!mainForm.controls[item.section].valid ? 'disabled' : 'default')" buttonText="Save and Continue" (onClick)="onSaveContinueClick($event)"></samButton>
+        <samButton *ngIf="i != objectFormData.length - 1" [buttonId]="item.section + '_sc'" [buttonType]="(!mainForm.controls[item.section].valid ? 'disabled' : 'default')" buttonText="Save and Continue" (onClick)="onSaveContinueClick($event)"></samButton>
       </div>
 
     </div>
