--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -266,7 +266,7 @@
         </ul>
       </section>
 
-      <section [attr.id]="generateID(opportunityFields.Synopsis)" *ngIf="shouldBeDisplayed(opportunityFields.Synopsis) && opportunity.data?.descriptions[0].content">
+      <section [attr.id]="generateID(opportunityFields.Synopsis)" *ngIf="shouldBeDisplayed(opportunityFields.Synopsis) && opportunity.data?.descriptions[0]?.content">
 
         <h2>Synopsis
           <samButton *ngIf="differences?.changesExistSynopsis" [buttonId]="'defaultBtnSynopsis'" [buttonText]="'View Changes'" [buttonType]="btnType" (click)="showHideSynopsis()"></samButton>
@@ -281,7 +281,7 @@
           <ng-container *ngIf="opportunity.data?.type !== 'i'">Description</ng-container>
         </h3>
 
-        <div [innerHTML]="opportunity.data?.descriptions[0].content | fixhtml"></div>
+        <div [innerHTML]="opportunity.data?.descriptions[0]?.content | fixhtml"></div>
       </section>
       <span *ngIf="showChangesSynopsis && differences?.description" [innerHTML]="differences?.description"></span>
 
