--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -21,6 +21,7 @@
     (organization)="onOrganizationsChange($event)"
     [required]="true"
     [searchMessage]="orgError"
+    [initial]="orgs"
   ></agencyPicker>
 
   <!-- Permissions -->
