--- a/src/styles/components/_organization-profile.scss
+++ b/src/styles/components/_organization-profile.scss
@@ -6,4 +6,9 @@
   .org-notification{
     min-height: 100px;
   }
+
+  .current-hierarchy-link{
+    color: $color-black;
+    text-decoration: none;
+  }
 }
